add basic larger font to demos

--- a/js-get-input/index.html
+++ b/js-get-input/index.html
@@ -4,6 +4,15 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Get user input</title>
+  <style>
+    body {
+      font: 1.5em Arial, Helvetica, sans-serif;
+    }
+    input {
+      font-size: 1em;
+      cursor: pointer;
+    }
+  </style>
 </head>
 <body>
   
