--- a/js-show-date/index.html
+++ b/js-show-date/index.html
@@ -3,10 +3,19 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>JavaScript: show date</title>
+  <style>
+    body {
+      font: 1.5em Arial, Helvetica, sans-serif;
+    }
+    button {
+      font-size: 1em;
+      cursor: pointer;
+    }
+  </style>
 </head>
 <body>
-  <button id="myBtn" style="cursor: pointer; border-radius: 4px; background: #aaa;">What's the date?</button>
+  <button id="myBtn" style="">What's the date?</button>
 
   <p id="demo">I've no idea. Click the button.</p>
 
