remove empty stuyle attribute

--- a/js-show-date/index.html
+++ b/js-show-date/index.html
@@ -15,7 +15,7 @@
   </style>
 </head>
 <body>
-  <button id="myBtn" style="">What's the date?</button>
+  <button id="myBtn">What's the date?</button>
 
   <p id="demo">I've no idea. Click the button.</p>
 
