simpliofy swap class code

--- a/js-swap-class/index.html
+++ b/js-swap-class/index.html
@@ -15,15 +15,13 @@
       height: 178px;
       width: 300px;
       background-repeat: no-repeat;
-      border: solid green 4px;
+      border: solid #999 2px;
       transition: all 1s;
     }
     .car {
-      border-color: silver;
       background-image: url("images/tesla-model-s.jpg");
     }
     .cat {
-      border-color: pink;
       background-image: url("images/kitten.jpg");
     }
   </style>
