--- a/js-swap-class/index.html
+++ b/js-swap-class/index.html
@@ -36,17 +36,13 @@
 
 function showImage(whichPic) {
   picture.innerHTML = "";
-  if (whichPic === "photo1") {
-    picture.classList.remove("cat");
-    picture.classList.add("car");
-  } else {
-    picture.classList.remove("car");
-    picture.classList.add("cat");
-  }
+  console.log(whichPic);
+  picture.classList = [];
+  picture.classList.add(whichPic)
 }
 
-photo1.addEventListener("click", function(){ showImage(this.id) });
-photo2.addEventListener("click", showImage);
+photo1.addEventListener("click", function(){ showImage("car") });
+photo2.addEventListener("click", function(){ showImage("cat") });
 
 </script>
 </body>
