remove array brackets from kitten/tesla style swap

--- a/js-swap-class/index.html
+++ b/js-swap-class/index.html
@@ -37,7 +37,7 @@
 function showImage() {
   picture.innerHTML = "";
   console.log(event.target.id);
-  picture.classList = [event.target.id];
+  picture.classList = event.target.id;
 }
 
 [car,cat].forEach(c => c.addEventListener( "click", showImage ));
