--- a/js-change-element/index.html
+++ b/js-change-element/index.html
@@ -5,47 +5,62 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>JavaScript: change an element</title>
   <style>
-    body, button {
+    body {
       font-family: Arial, Helvetica, sans-serif;
       font-size: 1.25em;
+      background: #666;
+      color: #333;
+    }
+    main {
+      max-width: 600px;
+      margin: 0 auto;
+      text-align: center;
+      background: #eee;
+      padding: .25em 1em 1em;
     }
     button {
       font-size: 1em;
+      background: #9c9;
+      border: none;
+      border-radius: 4px;
     }
     .changeMe {
       background: #336;
       color: #fcc;
       transition: all 1s;
     }
+    .thelinks {
+      padding: 2px .25em;
+      border-radius: 3px;
+      transition: all 1s;
+    }
   </style>
 </head>
 
 <body>
+  <main>
+    <h1>JavaScript "toggle class" demo</h1>
+    <p>Click the button to change just the colours of the links—the JavaScript adds/removes the class "highlight".</p>
 
-  <p>Click the button to change the colours of the links—the JavaScript adds a class "highlight" to achieve this.</p>
+    <p>A link <a class="thelinks" href="#">link 1 text</a> to change.</p>
+    <p>Another link <a class="thelinks" href="#">link 2 text</a> to change.</p>
 
-  <p>A link <a class="thelinks" href="#">link 1 text</a>.</p>
+    <button id="changeLinks">Change link colours</button>
+  </main>
 
-  <p>Another link <a class="thelinks" href="#">link 2 text</a>.</p>
-
-  <button id="changeLinks">Change link colours</button>
 
 <script>
     
-const changeLinks = document.getElementById('changeLinks');
-const thelinks = document.getElementsByClassName('thelinks');
+const thelinks = document.getElementsByClassName("thelinks");
 
-const addClass = () => {
-  for(i in thelinks){
+const swapClass = () => {
+  console.log(thelinks);
+  for (let i = 0; i < thelinks.length; i++) {
     thelinks[i].classList.toggle("changeMe");
   }
 }
 
-// remove the 'const' from the function then:
-// addClass = "hello";
-// console.log(addClass);
-
-changeLinks.addEventListener("click", addClass);
+changeLinks.addEventListener("click", swapClass);
 
 </script>
 
